--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
   },
   "dependencies": {
     "gatsby": "^1.9.42",
-    "gatsby-link": "^1.4.1"
+    "gatsby-link": "^1.4.1",
+    "gatsby-plugin-glamor": "^1.6.7",
+    "gatsby-plugin-styled-components": "^1.0.5",
+    "gatsby-plugin-typography": "^1.7.9",
+    "typography-theme-bootstrap": "^0.16.7",
+    "typography-theme-lawton": "^0.15.10"
   }
 }
